--- a/src/FlatMate.Web/wwwroot/css/variables.scss
+++ b/src/FlatMate.Web/wwwroot/css/variables.scss
@@ -3,12 +3,14 @@
  */
 
 $color-primary: #1a8ee9;
+$color-secondary: #ddd;
 $color-success: #5cb85c;
 $color-info: #5bc0de;
 $color-warning: #f0ad4e;
 $color-danger: #d9534f;
 
 $color-gray: #aaaaaa;
+$color-input-placeholder: #ccc;
 
 $color-main-background: #e5e7ea;
 $color-border: #d1d1d1;
