--- a/src/FlatMate.Web/Areas/Offers/Views/Market/Index.cshtml
+++ b/src/FlatMate.Web/Areas/Offers/Views/Market/Index.cshtml
@@ -9,6 +9,12 @@
 
 <section class="container">
 
+    <div class="row align-right actions">
+        <div class="col-auto">
+            <a asp-controller="ProductFavorite" asp-action="Manage">Favoriten verwalten</a>
+        </div>
+    </div>
+
     <div class="row">
 
         @foreach (var market in Model.Markets)
