--- a/src/FlatMate.Web/Areas/Offers/Views/ProductFavorite/Manage.cshtml
+++ b/src/FlatMate.Web/Areas/Offers/Views/ProductFavorite/Manage.cshtml
@@ -16,20 +16,25 @@
 <script type="text/x-template" id="product-favorite-editor-template">
 
     <div class="row select-market">
-        <div class="col-4">
+        <div class="col-2 align-self-center">
             Markt:
         </div>
-        <div class="col-4">
+        <div class="col-4 align-self-center">
             <select data-bind="options: model.markets, optionsText: 'name', value: selectedMarket,"></select>
         </div>
     </div>
 
     <div class="row filter">
-        <div class="col-4">
+        <div class="col-2 align-self-center">
             Suche:
         </div>
-        <div class="col-8">
+        <div class="col-4 align-self-center">
             <input type="text" data-bind="value: searchTerm" placeholder="Name, Marke oder Beschreibung..." />
+        </div>
+        <div class="col-6 align-self-center">
+            <label>
+                <input type="checkbox" data-bind="value: onlyFavorites" /> Nur Favoriten
+            </label>
         </div>
     </div>
 
@@ -49,26 +54,26 @@
                 </div>
 
                 <div class="row no-gutters product-actions">
-                    <div class="col" data-bind="visible: showFavoriteBtn">
-                        <div class="btn btn-secondary" data-bind="click: favorite">
+                    <div class="col-12" data-bind="visible: showFavoriteBtn">
+                        <div class="btn btn-secondary" title="Als Favorit hinzufügen" data-bind="click: favorite">
                             <i class="fa fa-heart" aria-hidden="true"></i> Als Favorit
                         </div>
                     </div>
-                    <div class="col" data-bind="visible: showUnfavoriteBtn">
-                        <div class="btn btn-primary" title="Als Favorit löschen" data-bind="click: unfavorite">
+                    <div class="col-12" data-bind="visible: showUnfavoriteBtn">
+                        <div class="btn btn-success" title="Als Favorit löschen" data-bind="click: unfavorite">
                             <i class="fa fa-heart" aria-hidden="true"></i> Favorisiert
                         </div>
                     </div>
-                    <div class="col" data-bind="visible: showLoadingButton">
-                        <div class="btn btn-secondary">
-                            <i class="fa fa-circle-o-notch fa-spin fa-fw" aria-hidden="true"></i> Lade
+                    <div class="col-12" data-bind="visible: showLoadingButton">
+                        <div class="loading">
+                            <i class="fa fa-circle-o-notch fa-spin fa-fw" aria-hidden="true"></i> Lade...
                         </div>
                     </div>
                 </div>
 
                 <div class="row no-gutters product-actions">
                     <div class="col">
-                        <a href="/Offers/Product/View/3132" target="_blank" class="btn btn-secondary" title="Details">Details</a>
+                        <a href="#" data-bind="attr: { href: detailUrl }" target="_blank" class="btn btn-secondary" title="Details">Details</a>
                     </div>
                 </div>
 
