--- a/src/FlatMate.Web/Areas/Offers/Views/Market/View.cshtml
+++ b/src/FlatMate.Web/Areas/Offers/Views/Market/View.cshtml
@@ -87,6 +87,10 @@
                         </div>
 
                         <div class="name">
+                            @if (offer.IsFavorite)
+                            {
+                                <i class="fa fa-heart" aria-hidden="true"></i>
+                            }
                             <strong>@offer.Product.Name</strong>
                         </div>
 
