- favorite manage fix - product caching

--- a/src/FlatMate.Web/Areas/Offers/Views/ProductFavorite/Manage.cshtml
+++ b/src/FlatMate.Web/Areas/Offers/Views/ProductFavorite/Manage.cshtml
@@ -33,7 +33,7 @@
         </div>
         <div class="col-6 align-self-center">
             <label>
-                <input type="checkbox" data-bind="value: onlyFavorites" /> Nur Favoriten
+                <input type="checkbox" data-bind="checked: onlyFavorites" /> Nur Favoriten
             </label>
         </div>
     </div>
