--- a/src/FlatMate.Web/Areas/Offers/Views/Market/View.cshtml
+++ b/src/FlatMate.Web/Areas/Offers/Views/Market/View.cshtml
@@ -87,7 +87,7 @@
                         </div>
 
                         <div class="name">
-                            @if (offer.IsFavorite)
+                            @if (Model.Favorites.Contains(offer))
                             {
                                 <i class="fa fa-heart" aria-hidden="true"></i>
                             }
