- add find polyfill for ie - fix css flex issue

--- a/src/FlatMate.Web/wwwroot/css/offers/productfavorite-manage.scss
+++ b/src/FlatMate.Web/wwwroot/css/offers/productfavorite-manage.scss
@@ -25,7 +25,7 @@
         }
 
         .name {
-            flex: 2;
+            flex: 2 0 auto;
             font-size: .9rem;
             margin-bottom: .5rem;
         }
