--- a/src/FlatMate.Web/Areas/Offers/Views/Product/View.cshtml
+++ b/src/FlatMate.Web/Areas/Offers/Views/Product/View.cshtml
@@ -14,7 +14,7 @@
         <div class="row">
             <div class="col col-picture">
                 <div class="picture-wrapper">
-                    <img src="@Model.Product.ImageUrl?resize=150px:150px" />
+                    <img src="@Model.Product.ImageUrl?resize=150px:150px" width="150" />
                 </div>
             </div>
             <div class="col-md col-product-info">
