--- a/src/FlatMate.Web/Areas/Offers/Views/Market/View.cshtml
+++ b/src/FlatMate.Web/Areas/Offers/Views/Market/View.cshtml
@@ -25,9 +25,12 @@
                 <div>
                     <span style="font-size: 1.5rem;">@Model.Market.Name</span>
                 </div>
-                <div>
-                    <small>@Model.Market.Street, @Model.Market.PostalCode @Model.Market.City</small>
-                </div>
+                @if (!string.IsNullOrEmpty(Model.Market.Street))
+                {
+                    <div>
+                        <small>@Model.Market.Street, @Model.Market.PostalCode @Model.Market.City</small>
+                    </div>
+                }
             </div>
             <div class="col-sm-12 col-md-3 col-offer-count">
                 @Model.Offers.Count Produkte im Angebot<br />
@@ -77,7 +80,7 @@
 
         <div class="row">
 
-            @foreach (var offer in offersGroup.OrderBy(x => x.Product.ExternalId))
+            @foreach (var offer in offersGroup.OrderBy(x => x.From).ThenBy(x => x.Product.ExternalId))
             {
                 <div class="col-sm-6 col-lg-4 col-xl-3 col-offer">
                     <a asp-area="Offers" asp-controller="Product" asp-action="View" asp-route-id="@offer.ProductId" class="standard-box offer-box">
