--- a/src/FlatMate.Web/wwwroot/css/_vendor/bootstrap-grid.scss
+++ b/src/FlatMate.Web/wwwroot/css/_vendor/bootstrap-grid.scss
@@ -21,7 +21,7 @@ html {
   width: 100%;
 }
 
-@media (min-width: 576px) {
+/*@media (min-width: 576px) {
   .container {
     max-width: 540px;
   }
@@ -37,7 +37,7 @@ html {
   .container {
     max-width: 960px;
   }
-}
+}*/
 
 @media (min-width: 1200px) {
   .container {
