--- a/src/FlatMate.Web/Areas/Offers/Views/Market/View.cshtml
+++ b/src/FlatMate.Web/Areas/Offers/Views/Market/View.cshtml
@@ -51,7 +51,7 @@
                     <a asp-area="Offers" asp-controller="Product" asp-action="View" asp-route-id="@offer.ProductId" class="standard-box offer-box">
 
                         <div class="image">
-                            <img class="b-lazy" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="@OfferImageHelper.Get(offer, 150)" width="150" />
+                            <img class="b-lazy" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="@OfferImageHelper.Get(offer.ImageUrl, (Company)offer.Market.CompanyId, 150)" width="150" />
                         </div>
 
                         <div class="name">
@@ -86,7 +86,7 @@
                     <a asp-area="Offers" asp-controller="Product" asp-action="View" asp-route-id="@offer.ProductId" class="standard-box offer-box">
 
                         <div class="image">
-                            <img class="b-lazy" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="@OfferImageHelper.Get(offer, 150)" width="150" />
+                            <img class="b-lazy" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="@OfferImageHelper.Get(offer.ImageUrl, (Company)offer.Market.CompanyId, 150)" width="150" />
                         </div>
 
                         <div class="name">
