--- a/src/FlatMate.Web/Areas/Offers/Views/Product/View.cshtml
+++ b/src/FlatMate.Web/Areas/Offers/Views/Product/View.cshtml
@@ -14,7 +14,7 @@
         <div class="row">
             <div class="col col-picture">
                 <div class="picture-wrapper">
-                    <img src="@Model.Product.ImageUrl?resize=150px:150px" width="150" />
+                    <img src="@OfferImageHelper.Get(Model.Product.ImageUrl, (Company)Model.Product.CompanyId, 150)" width="150" />
                 </div>
             </div>
             <div class="col-md col-product-info">
@@ -24,7 +24,7 @@
                 <div>@Model.Product.SizeInfo</div>
 
                 <div class="product-price">
-                    
+
                     @if (Model.Offers.Count > 0)
                     {
                         <div><text>Letztes Angebot: @Model.Offers.Last().Price €</text></div>
