--- a/src/FlatMate.Web/wwwroot/css/shared/main.scss
+++ b/src/FlatMate.Web/wwwroot/css/shared/main.scss
@@ -144,7 +144,7 @@ a {
 }
 
 .align-self-center {
-    align-self:center
+    align-self: center
 }
 
 .align-center {
@@ -152,6 +152,19 @@ a {
     justify-content: center;
 }
 
+.flex-v-center {
+    display: flex;
+    align-items: center
+}
+
+.flex-grow {
+    flex: 1;
+}
+
 .vertical-center {
     align-items: center;
+}
+
+.word-break-all {
+    word-break: break-all;
 }
