--- a/src/FlatMate.Web/Areas/Offers/Views/Market/View.cshtml
+++ b/src/FlatMate.Web/Areas/Offers/Views/Market/View.cshtml
@@ -19,7 +19,7 @@
 
         <div class="row">
             <div class="col-sm-12 col-md-4 col-market-image">
-                <img src="@Model.Market.Company.ImageLink" height="66" />
+                <img src="@Model.Market.CompanyData.ImageLink" height="66" />
             </div>
             <div class="col-sm-12 col-md-5 col-market-info">
                 <div>
