--- a/src/FlatMate.Web/Areas/Offers/Views/Product/View.cshtml
+++ b/src/FlatMate.Web/Areas/Offers/Views/Product/View.cshtml
@@ -14,7 +14,7 @@
         <div class="row">
             <div class="col col-picture">
                 <div class="picture-wrapper">
-                    <img src="@OfferImageHelper.Get(Model.Product.ImageUrl, (Company)Model.Product.CompanyId, 150)" width="150" />
+                    <img class="b-lazy" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="@OfferImageHelper.Get(Model.Product.ImageUrl, (Company)Model.Product.CompanyId, 150)" width="150" height="150" />
                 </div>
             </div>
             <div class="col-md col-product-info">
