--- a/src/FlatMate.Web/Views/Shared/_Layout.cshtml
+++ b/src/FlatMate.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿@model FlatMate.Web.Mvc.Base.BaseViewModel
+﻿@model FlatMate.Web.Mvc.Base.MvcViewModel
 
 <!DOCTYPE html>
 <html>
@@ -71,7 +71,7 @@
     </nav>
 
     <main class="@ViewData["MainClass"]">
-        <section>
+        <section class="container">
             <alert-bar></alert-bar>
         </section>
 
