- add description - add logging

--- a/src/FlatMate.Web/Areas/Offers/Views/Admin/ManageProductDuplicates.cshtml
+++ b/src/FlatMate.Web/Areas/Offers/Views/Admin/ManageProductDuplicates.cshtml
@@ -35,6 +35,10 @@
                                     <td>@productJso.Brand</td>
                                 </tr>
                                 <tr>
+                                    <td>Beschr.</td>
+                                    <td>@productJso.Description.Truncate(100)</td>
+                                </tr>
+                                <tr>
                                     <td>Preis</td>
                                     <td>@productJso.Price</td>
                                 </tr>
