--- a/src/FlatMate.Web/Areas/Offers/Views/_ViewImports.cshtml
+++ b/src/FlatMate.Web/Areas/Offers/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using FlatMate.Web.Areas.Offers
 @using FlatMate.Module.Offers.Domain
+@using FlatMate.Module.Common.Extensions
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
