--- a/src/FlatMate.Web/wwwroot/css/shared/main.scss
+++ b/src/FlatMate.Web/wwwroot/css/shared/main.scss
@@ -152,6 +152,11 @@ a {
     justify-content: center;
 }
 
+.flex-h-center {
+    display: flex;
+    justify-content: center;
+}
+
 .flex-v-center {
     display: flex;
     align-items: center
